# my_agent_project

./: .env-example  .gitignore  CLAUDE.md  README.md  main.py  mini_agent.py  pyproject.toml  requirements.txt  test_class.py
demos/: demo16_langgraph断点.py  demo_01__glm_basic.py  demo_02_after_sales_agent.py  demo_03_multi_agent.py  demo_04_embedding.py  demo_05_langchain_rag.py  demo_09_reranker.py  demo_10_多模态.py  demo_11_多模态检索.py  demo_12_RAG离线流水线.py  demo_13_状态检查点.py  demo_14_记忆回滚.py  demo_15_中文检索英文图.py  demo_16_langgraph断点.py  demo_17_消息裁剪.py  demo_18_星星架构.py  demo_19_自定义代码保护切分器.py  demo_20_supervisor架构.py  demo_21_子图嵌套.py  demo_22_mcp集成.py  demo_23_Supervisor实战.py  demo_24_token桶和退避重试.py  demo_25_e2e沙箱.py  demo_26_财报审计.py  demo_27_缺陷修复流水线.py  demo_28_自主代码演进.py
docs/: 00_python基础.md  01.Agent基础概念.md  01.md  02.LangChain.md  02.md  02_LangChain.md  03.大模型.md  04_检索增强.md  05_LangGraph状态持久化机制.md  05_状态检查点持久化器.md  06_人机协同.md  07_记忆视界管理.md  08_Muti-Agent.md  09_GraphRAG.md  10_熔断机制.md  掘金文章-agent学习项目拆解.md
src/llm/: base.py
src/my_agent/: mini_agent.py  multi_agent_orchestrator.py
src/my_agent_langchain/: refund_agent.py  weather_agent.py
src/my_agent_langgraph/: refund_agent.py
src/prompts/: __init__.py  utils.py
src/tools/: __init__.py  mock_tools.py
