[project]
name = "my-agent-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "cachetools==7.0.6",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.13",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2.4",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pyjwt==2.12.1",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "sniffio==1.3.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
]
